--- a/src/catalog.html
+++ b/src/catalog.html
@@ -302,12 +302,10 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
-                      1 765.000 ₽
+                    <span class="product-price__current  price-current">
+                      1 765
                     </span>
-                    <span class="product-price__old">
 
-                    </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
                     В&nbsp;корзину
@@ -328,12 +326,10 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       1 250
                     </span>
-                    <span class="product-price__old">
 
-                    </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
                     В&nbsp;корзину
@@ -352,11 +348,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current price-current">
                       2 100
                     </span>
-                    <span class="product-price__old">
-                      1 800 ₽
+                    <span class="product-price__old price-old price-old">
+                      1 800
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -377,12 +373,10 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       1 760
                     </span>
-                    <span class="product-price__old">
 
-                    </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
                     В&nbsp;корзину
@@ -401,11 +395,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       1 670
                     </span>
-                    <span class="product-price__old">
-
+                    <span class="product-price__old price-old">
+                      2500
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -427,11 +421,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       2 300
                     </span>
-                    <span class="product-price__old">
-                      257.000 ₽
+                    <span class="product-price__old price-old">
+                      2570
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -453,11 +447,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       3 150
                     </span>
-                    <span class="product-price__old">
-                       4 257.000 ₽
+                    <span class="product-price__old price-old">
+                       4 257
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -478,11 +472,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       900
                     </span>
-                    <span class="product-price__old">
-                      1 257.000 ₽
+                    <span class="product-price__old price-old">
+                      1 257
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -504,11 +498,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       2 167
                     </span>
-                    <span class="product-price__old">
-                      3 257.000 ₽
+                    <span class="product-price__old price-old">
+                      3 257
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -530,11 +524,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       1 220
                     </span>
-                    <span class="product-price__old">
-                      2 257.000 ₽
+                    <span class="product-price__old price-old">
+                      2 257
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -556,11 +550,10 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       1 167
                     </span>
-                    <span class="product-price__old">
-                    </span>
+
                   </div>
                   <button class="product__btn btn-reset btn-bag">
                     В&nbsp;корзину
@@ -581,11 +574,11 @@
                     </a>
                   </h3>
                   <div class="product__price product-price">
-                    <span class="product-price__current">
+                    <span class="product-price__current  price-current">
                       2 677
                     </span>
-                    <span class="product-price__old">
-                       3 257.000 ₽
+                    <span class="product-price__old price-old">
+                       3 257
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
