--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -50,11 +50,17 @@
             Faq
           </a></li>
           <li class="nav__item">
-           <div class="nav__searach">
-            <span class="nav__link nav__searach-link">
-              Поиск
-            </span>
-            <input type="search" class="visually-hidden">
+           <div class="nav__searach searach-box">
+              <input type="search" class=" searach-box__input " placeholder="Введите свой запрос">
+              <button class="btn-reset searach-box__btn">
+                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.4294 4.06152L13.9385 4.57056L4.57056 13.9378L4.06152 13.4291L13.4294 4.06152Z" fill="#7C7C7C"/>
+                  <path d="M4.57056 4.06152L13.9385 13.4287L13.4294 13.9381L4.06152 4.57092L4.57056 4.06152Z" fill="#7C7C7C"/>
+                </svg>
+              </button>
+              <button class="btn-reset nav__link searach-box__link">
+                Поиск
+              </button>
            </div>
           </li>
         </ul>
