--- a/src/parts/hero.html
+++ b/src/parts/hero.html
@@ -38,14 +38,7 @@
             <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
             <button class="btn-reset better-call__btn" data-graph-path="modal-tell">Заказать звонок</button>
           </div>
-          <div class="bag">
-            <span class="bag__num">5</span>
-            <button class="btn-reset bag__btn">
-              <svg class="">
-                <use xlink:href="img/sprite.svg#bag"></use>
-              </svg>
-            </button>
-          </div>
+          @include('./bag.html')
         </aside>
     </div>
   </div>
