--- a/src/parts/popular-flow.html
+++ b/src/parts/popular-flow.html
@@ -23,12 +23,10 @@
             </a>
           </h3>
           <div class="product__price product-price">
-            <span class="product-price__current">
-              167.000 ₽
+            <span class="product-price__current price-current">
+              1990
             </span>
-            <span class="product-price__old">
 
-            </span>
           </div>
           <button class="product__btn btn-reset btn-bag">
             В корзину
@@ -44,10 +42,11 @@
             </a>
           </h3>
           <div class="product__price product-price">
-            <span class="product-price__current">
-              167.000 ₽
+            <span class="product-price__current price-current">
+              2300
             </span>
-            <span class="product-price__old">
+            <span class="product-price__old price-old">
+              2 870
             </span>
           </div>
           <button class="product__btn btn-reset btn-bag">
@@ -67,11 +66,11 @@
             </a>
           </h3>
           <div class="product__price product-price">
-            <span class="product-price__current">
-              167.000 ₽
+            <span class="product-price__current price-current">
+              1 550
             </span>
-            <span class="product-price__old">
-              187.000 ₽
+            <span class="product-price__old price-old">
+              1 870
             </span>
           </div>
           <button class="product__btn btn-reset btn-bag">
