--- a/src/catalog.html
+++ b/src/catalog.html
@@ -312,11 +312,10 @@
                   </button>
                 </article>
 
-                <article class="product">
-                  <div class="product__position">
+                <article class="product" data-info="new">
+                  <!-- <div class="product__position">
                     <span class="product__position-offers product__position-offers--new">new</span>
-                    <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
-                  </div>
+                  </div> -->
                   <a href="./card.html" class="product__link-img">
                     <img src="./img/cataog-img-2.jpg" alt="Картинка букета" class="product__img">
                   </a>
@@ -336,11 +335,10 @@
                   </button>
                 </article>
 
-                <article class="product">
-                  <div class="product__position">
-                  </div>
+                <article class="product" >
+
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-3.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-3.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -359,13 +357,10 @@
                     В&nbsp;корзину
                   </button>
                 </article>
-                <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <span class="product__position-offers product__position-offers--sale">sale</span>
-                  </div>
+                <article class="product" data-info="sale">
+
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-4.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-4.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -387,7 +382,7 @@
                   <div class="product__position">
                   </div>
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-5.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-5.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -407,13 +402,13 @@
                   </button>
                 </article>
 
-                <article class="product">
-                  <div class="product__position">
+                <article class="product" data-info="new">
+                  <!-- <div class="product__position">
                     <span class="product__position-offers product__position-offers--new">new</span>
                     <span class="product__position-offers product__position-offers--sale">sale</span>
-                  </div>
+                  </div> -->
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-6.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-6.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -433,17 +428,13 @@
                   </button>
                 </article>
 
-                <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
-                  </div>
+                <article class="product" data-info="sale" >
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-7.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-7.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
-                      лучший день
+                      1лучший день
                     </a>
                   </h3>
                   <div class="product__price product-price">
@@ -458,13 +449,9 @@
                     В&nbsp;корзину
                   </button>
                 </article>
-                <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
-                  </div>
+                <article class="product" >
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-8.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-8.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -484,13 +471,9 @@
                   </button>
                 </article>
 
-                <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <span class="product__position-offers product__position-offers--sale">sale</span>
-                  </div>
+                <article class="product" data-info="sale">
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-9.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-9.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -511,12 +494,9 @@
                 </article>
 
                 <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
-                  </div>
+
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-10.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-10.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -536,13 +516,10 @@
                   </button>
                 </article>
 
-                <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <span class="product__position-offers product__position-offers--sale">sale</span>
-                  </div>
+                <article class="product" data-info="new">
+
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-11.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-11.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
@@ -561,12 +538,9 @@
                 </article>
 
                 <article class="product">
-                  <div class="product__position">
-                    <!-- <span class="product__position-offers product__position-offers--new">new</span> -->
-                    <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
-                  </div>
+
                   <a href="./card.html" class="product__link-img">
-                    <img src="../img/cataog-img-12.jpg" alt="Картинка букета" class="product__img">
+                    <img src="./img/cataog-img-12.jpg" alt="Картинка букета" class="product__img">
                   </a>
                   <h3 class="product__title">
                     <a href="./card.html">
