--- a/src/parts/order.html
+++ b/src/parts/order.html
@@ -7,7 +7,7 @@
     <div class=" order__container">
       <div class="order__inner">
         <div class="order__image">
-          <img src="../img/faq-img-back.png" alt="" class="order__img">
+          <img src="./img/faq-img-back.png" alt="" class="order__img">
         </div>
         <ul class="order__list order-list list-reset">
           <li class="order-list__item">
