--- a/src/parts/popular-flow.html
+++ b/src/parts/popular-flow.html
@@ -9,13 +9,12 @@
     </div>
     <div class="popular__inner">
       <div class="popular__flows popular-flows">
-        <article class="product">
-          <div class="product__position">
+        <article class="product" data-info="new">
+          <!-- <div class="product__position">
             <span class="product__position-offers product__position-offers--new">new</span>
-            <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
-          </div>
+          </div> -->
           <a href="./card.html" class="product__link-img">
-            <img src="../img/pop-img-1.jpg" alt="Картинка букета" class="product__img">
+            <img src="./img/pop-img-1.jpg" alt="Картинка букета" class="product__img">
           </a>
           <h3 class="product__title">
             <a href="./card.html">
@@ -34,7 +33,7 @@
         </article>
         <article class="product">
           <a href="./card.html" class="product__link-img">
-            <img src="../img/pop-img-2.jpg" alt="Картинка букета" class="product__img">
+            <img src="./img/pop-img-2.jpg" alt="Картинка букета" class="product__img">
           </a>
           <h3 class="product__title">
             <a href="./card.html">
@@ -53,12 +52,12 @@
             В корзину
           </button>
         </article>
-        <article class="product">
-          <div class="product__position">
+        <article class="product" data-info="sale">
+          <!-- <div class="product__position">
             <span class="product__position-offers product__position-offers--sale">sale</span>
-          </div>
+          </div> -->
           <a href="./card.html" class="product__link-img">
-            <img src="../img/pop-img-3.jpg" alt="Картинка букета" class="product__img">
+            <img src="./img/pop-img-3.jpg" alt="Картинка букета" class="product__img">
           </a>
           <h3 class="product__title">
             <a href="./card.html">
