--- a/src/parts/reason.html
+++ b/src/parts/reason.html
@@ -9,8 +9,8 @@
       </h2>
       <div class="reason__top-img">
         <picture>
-          <source srcset="../img/reason-img-1.webp" type="image/webp">
-          <img loading="lazy" src="../img/reason-img-1.jpg" class="image"alt="Картинка">
+          <source srcset="./img/reason-img-1.webp" type="image/webp">
+          <img loading="lazy" src="./img/reason-img-1.jpg" class="image"alt="Картинка">
         </picture>
       </div>
     </div>
@@ -36,20 +36,20 @@
         <div class="reason__images">
           <div class="reason__img">
             <picture>
-              <source srcset="../img/reason-img-2.webp" type="image/webp">
-              <img loading="lazy" src="../img/reason-img-2.jpg." class="image" alt="Картинка">
+              <source srcset="./img/reason-img-2.webp" type="image/webp">
+              <img loading="lazy" src="./img/reason-img-2.jpg." class="image" alt="Картинка">
             </picture>
           </div>
           <div class="reason__img">
             <picture>
-              <source srcset="../img/reason-img-3.webp" type="image/webp">
-              <img loading="lazy" src="../img/reason-img-3.jpg." class="image" alt="Картинка">
+              <source srcset="./img/reason-img-3.webp" type="image/webp">
+              <img loading="lazy" src="./img/reason-img-3.jpg." class="image" alt="Картинка">
             </picture>
           </div>
           <div class="reason__img">
             <picture>
-              <source srcset="../img/reason-img-4.webp" type="image/webp">
-              <img loading="lazy" src="../img/reason-img-4.jpg." class="image" alt="Картинка">
+              <source srcset="./img/reason-img-4.webp" type="image/webp">
+              <img loading="lazy" src="./img/reason-img-4.jpg." class="image" alt="Картинка">
             </picture>
           </div>
         </div>
