--- a/src/placing.html
+++ b/src/placing.html
@@ -155,7 +155,7 @@
               <li class="card-list__item">
                 <article class="bag-card">
                   <div class="bag-card__img">
-                    <img src="../img/card-slider-1.jpg" alt="Букет" class="bag-card__image">
+                    <img src="./img/card-slider-1.jpg" alt="Букет" class="bag-card__image">
                   </div>
                   <div class="bag-card__info">
                     <div class="bag-card__info-top">
@@ -182,7 +182,7 @@
               <li class="card-list__item">
                 <article class="bag-card">
                   <div class="bag-card__img">
-                    <img src="../img/card-slider-1.jpg" alt="Букет" class="bag-card__image">
+                    <img src="./img/card-slider-1.jpg" alt="Букет" class="bag-card__image">
                   </div>
                   <div class="bag-card__info">
                     <div class="bag-card__info-top">
